--- a/templates/Originals/Goblin.html
+++ b/templates/Originals/Goblin.html
@@ -1,4 +1,13 @@
-<style type="text/css">
+<!doctype html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Method - Important Discovery</title>
+
+  <!-- CSS Reset -->
+  <style type="text/css">
 
   html,  body {
     margin: 0 !important;
@@ -132,10 +141,11 @@
 }
 
 </style>
-
+</head>
+<body bgcolor="#000000" width="100%" style="margin: 0;" yahoo="yahoo">
   <!-- Visually Hidden Preheader Text -->
   <div style="display: none; max-height: 0px; overflow: hidden;">
-    {{{ brandName }}} - Engineers of Diz'count have made an important discovery! Target the MMO+RPG Audience and receive up to 15% off Sponsorship Costs.
+    Don't miss the opportunity to align {{{ brandName }}} with the MMORPG Community on the Highest Rated World of Warcraft Expansion of All Time!
   </div>
   <!-- Visually Hidden Preheader Text -->
 
@@ -150,7 +160,7 @@
           <!-- Desktop Only, Flush : BEGIN -->
           <tr>
             <td class="full-width-image qe_none">
-              <img src="{{ imageSrc }}" width="600" alt="Goblin excitedly glaring at glowing cube with flashing discount in it's hand" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
+              <img src="{{ imageSrc }}" width="600" alt="Time is Turning Back" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
             </td>
           </tr>
           <!-- Desktop Only, Flush : END -->
@@ -159,19 +169,12 @@
           <tr>
             <td class="full-width-image">
               <div class="qe_hide_desktop" style="display:none;width:0;overflow:hidden;max-height:0!important">
-                <img src="{{ imageSrcMobile }}" class="qe_img100" width="600" alt="Goblin excitedly glaring at glowing cube with flashing discount in it's hand" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
+                <img src="{{ imageSrcMobile }}" class="qe_img100" width="600" alt="Time is Turning Back" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
               </div>
             </td>
           </tr>
           <!-- Mobile Only Flush : END -->
-		
-		  <!-- Deliverables: BEGIN -->
-		<tr>
-          <td style="padding: 25px 0px 10px 0px; text-align: center; color: white; font-family: Helvetica; font-weight: bold; text-decoration: underline; font-size: larger;">
-                         {{{ brandName }}} Race to World First Example Deliverables
-          </td>
-        </tr>
-		  <!-- Deliverables: END -->
+
 
           <!-- Row One -->
           {{#if rowOneImage}}
@@ -183,7 +186,7 @@
                     <table cellspacing="0" cellpadding="0" border="0">
                       <tr>
                         <td style="padding: 5px; text-align: center">
-                          <img src="{{{ rowOneImage }}}" width="280" class="full-width-image" height="auto" alt="Image of {{{ rowOneTitle }}}" border="0" style="height:auto; max-width: 280px;">
+                          <img src="{{{ rowOneImage }}}" width="280" class="full-width-image" height="auto" alt="Content Calendar" border="0" style="height:auto; max-width: 280px;">
                         </td>
                       </tr>
                     </table>
@@ -191,12 +194,12 @@
                   <td class="stack-column-center">
                     <table cellspacing="0" cellpadding="0" border="0">
 					  <tr>
-                        <td style="padding: 0px 20px 10px 20px; text-align: center; color: white; font-family: Helvetica; font-weight: bold; text-decoration: underline; vertical-align: top;">
+                        <td style="padding: 0px 20px 10px 20px; text-align: center; color: white; font-family: Helvetica; font-weight: bold; text-decoration: underline;">
                          {{{ rowOneTitle }}}
                         </td>
                       </tr>
                       <tr>
-                        <td style="padding: 0px 20px; text-align: center; color: white; font-family: Helvetica; vertical-align: middle;">
+                        <td style="padding: 0px 20px; text-align: center; color: white; font-family: Helvetica">
                           {{{ rowOneText }}}
                         </td>
                       </tr>
@@ -219,7 +222,7 @@
                      <table cellspacing="0" cellpadding="0" border="0">
                        <tr>
                          <td style="padding: 5px; text-align: center">
-                           <img src="{{{ rowTwoImage }}}" width="280" class="full-width-image" height="auto" alt="Image of {{{ rowTwoTitle }}}" border="0" style="height:auto; max-width: 280px;">
+                           <img src="{{{ rowTwoImage }}}" width="280" class="full-width-image" height="auto" alt="Content Calendar" border="0" style="height:auto; max-width: 280px;">
                          </td>
                        </tr>
                      </table>
@@ -227,19 +230,19 @@
                    <td class="stack-column-center">
                      <table cellspacing="0" cellpadding="0" border="0">
 					 <tr>
-                        <td style="padding: 0px 20px 10px 20px; text-align: center; color: white; font-family: Helvetica; font-weight: bold; text-decoration: underline; vertical-align: top;">
+                        <td style="padding: 0px 20px 10px 20px; text-align: center; color: white; font-family: Helvetica; font-weight: bold; text-decoration: underline;">
                          {{{ rowTwoTitle }}}
                         </td>
                       </tr>
                        <tr>
-                         <td style="padding: 0px 20px; text-align: center; color: white; font-family: Helvetica; vertical-align: middle;">
+                         <td style="padding: 0px 20px; text-align: center; color: white; font-family: Helvetica">
                            {{{ rowTwoText }}}
                          </td>
                        </tr>
                      </table>
                    </td>
                  </tr>
-               </table>
+               </table>https://ci5.googleusercontent.com/proxy/qiqKw69kcPkVJPbuyt124ugrS3CPRBccjw4SZRpTmTx7cmOcebRTYTO7yqhM73Cj8b8xMp7SJMLmjzdvfvhcbZJY9uaQMvbMF6Kr-L8-CnNQ1AbLP3NH=s0-d-e1-ft#https://www.method.gg/media/email/important-discovery-background.jpg
              </td>
            </tr>
            {{/if}}
@@ -255,7 +258,7 @@
                     <table cellspacing="0" cellpadding="0" border="0">
                       <tr>
                         <td style="padding: 5px; text-align: center">
-                          <img src="{{{ rowThreeImage }}}" width="280" class="full-width-image" height="auto" alt="Image of {{{ rowThreeTitle }}}" border="0" style="height:auto; max-width: 280px;">
+                          <img src="{{{ rowThreeImage }}}" width="280" class="full-width-image" height="auto" alt="Content Calendar" border="0" style="height:auto; max-width: 280px;">
                         </td>
                       </tr>
                     </table>
@@ -263,12 +266,12 @@
                   <td class="stack-column-center">
                     <table cellspacing="0" cellpadding="0" border="0">
 					<tr>
-                        <td style="padding: 0px 20px 10px 20px; text-align: center; color: white; font-family: Helvetica; font-weight: bold; text-decoration: underline; vertical-align: top;">
+                        <td style="padding: 0px 20px 10px 20px; text-align: center; color: white; font-family: Helvetica; font-weight: bold; text-decoration: underline;">
                          {{{ rowThreeTitle }}}
                         </td>
                       </tr>
                       <tr>
-                        <td style="padding: 0px 20px; text-align: center; color: white; font-family: Helvetica; vertical-align: middle;">
+                        <td style="padding: 0px 20px; text-align: center; color: white; font-family: Helvetica">
                           {{{ rowThreeText }}}
                         </td>
                       </tr>
@@ -280,10 +283,27 @@
           </tr>
           {{/if}}
           <!-- Two Even Columns : END -->
-		  
-		 <!-- 1 Column Text : START -->
+
+		<!-- Footer -->
+		<tr>
+          <td style="padding: 25px 0px 10px 0px; text-align: center; color: white; font-family: Helvetica; font-weight: bold; text-decoration: underline; text-size: larger;">
+                         Razer Case Study
+          </td>
+        </tr>
+          <!-- Video Flush : BEGIN -->
           <tr>
-          <td align="center" valign="top"  style="padding: 15px 0px 20px 0px; text-align: center; font-family: Helvetica; font-size: 15px; mso-height-rule: exactly; line-height: 20px; color: #ffffff;">
+            <td class="full-width-image" style="padding: 0px 0px 40px 0px;">
+              <a href="https://www.method.gg/casestudy/method-x-razer" target="_blank">
+                <img src="https://www.method.gg/media/email/razer-footer-thumbnail-min.jpg" width="600" alt="Razer Case Study" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
+              </a>
+            </td>
+          </tr>
+          <!-- Video Flush : END -->
+
+          
+          <!-- 1 Column Text : START -->
+          <tr>
+          <td align="center" valign="top"  style="padding: 45px 0px 40px 0px; text-align: center; font-family: Helvetica; font-size: 15px; mso-height-rule: exactly; line-height: 20px; color: #ffffff;">
             <a style="padding: 15px 20px; width: 60%; text-align: center; border-radius: 4px; background-color: #ff9015; display: inline-block; color: #fff !important; text-decoration: none; font-weight: bold;" href="{{{ ctaLink }}}" target="_blank">
               Download {{{ brandName }}} Race to World First Proposal
             </a>
@@ -291,31 +311,7 @@
         </tr>
         <!-- 1 Column Text : END -->
 
-		<!-- Footer -->
-		<tr>
-          <td style="padding: 25px 0px 10px 0px; text-align: center; color: white; font-family: Helvetica; font-weight: bold; font-size: x-large;">
-                         Razer Case Study
-          </td>
-        </tr>
-          <!-- Video Flush : BEGIN -->
-          <tr>
-            <td class="full-width-image" style="padding: 0px 20px 40px 20px;">
-              <a href="https://www.method.gg/casestudy/method-x-razer" target="_blank">
-                <img src="https://www.method.gg/media/email/razer-footer-thumbnail-min.jpg" width="600" alt="Image of Razer products in glowing green neon room with city skyline in the background" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
-              </a>
-            </td>
-          </tr>
-          <!-- Video Flush : END -->
-		  
-		<!-- Footer: END -->
-		
-		<!-- Unsubscribe -->
-		<tr>
-          <td style="padding: 0px 0px 20px 0px; text-align: center; color: white; font-family: Helvetica; font-weight: 500; font-size: small;">
-                         If you wish to unsubscribe, visit the following URL: ::unsubscribeUrl::
-          </td>
-        </tr>
-		<!-- Unsubscribe: END -->
+
         </table>
         <!-- Email Body : END -->
 
@@ -323,3 +319,5 @@
     </td>
     </tr>
   </table>
+</body>
+</html>
