--- a/templates/Originals/launch.html
+++ b/templates/Originals/launch.html
@@ -1,3 +1,12 @@
+<!doctype html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Method - Time is Turning Back</title>
+
+  <!-- CSS Reset -->
   <style type="text/css">
 
   html,  body {
@@ -132,6 +141,8 @@
 }
 
 </style>
+</head>
+<body bgcolor="#000000" width="100%" style="margin: 0;" yahoo="yahoo">
   <!-- Visually Hidden Preheader Text -->
   <div style="display: none; max-height: 0px; overflow: hidden;">
     Don't miss the opportunity to align {{{ brandName }}} with the MMORPG Community on the Highest Rated World of Warcraft Expansion of All Time!
@@ -167,20 +178,12 @@
           <!-- Hero Image, Flush : BEGIN -->
           <tr>
             <td class="full-width-image">
-              <a href="https://calendly.com/tom-method/method-introductory-call" target="_blank"> 
-                <img src="https://www.method.gg/media/email/bottom-wotlk-min.png" width="600" alt="Book A Meeting With Our Team" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
+              <a href="https://www.google.com" target="_blank"> 
+                <img src="https://mcusercontent.com/f7b112206c401a0334f42d537/images/2f296ad0-0c59-3d5e-7b73-21f17e354aef.jpg" width="600" alt="Book A Meeting With Our Team" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
               </a>
             </td>
           </tr>
           <!-- Hero Image, Flush : END -->
-		  
-		  <!-- Unsubscribe -->
-		<tr>
-          <td style="padding: 15px 0px 15px 0px; text-align: center; color: white; font-family: Helvetica; font-weight: 500; font-size: small;">
-                         If you wish to unsubscribe, visit the following URL: ::unsubscribeUrl::
-          </td>
-        </tr>
-		<!-- Unsubscribe: END -->
 
 
         </table>
@@ -190,3 +193,5 @@
     </td>
     </tr>
   </table>
+</body>
+</html>
