--- a/templates/Originals/potions.html
+++ b/templates/Originals/potions.html
@@ -1,3 +1,12 @@
+<!doctype html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Method - Important Discovery</title>
+
+  <!-- CSS Reset -->
   <style type="text/css">
 
   html,  body {
@@ -132,6 +141,8 @@
 }
 
 </style>
+</head>
+<body bgcolor="#000000" width="100%" style="margin: 0;" yahoo="yahoo">
   <!-- Visually Hidden Preheader Text -->
   <div style="display: none; max-height: 0px; overflow: hidden;">
     Don't miss the opportunity to align {{{ brandName }}} with the MMORPG Community on the Highest Rated World of Warcraft Expansion of All Time!
@@ -146,15 +157,15 @@
         <!-- Email Body : BEGIN -->
         <table cellspacing="0" cellpadding="0" border="0" align="center" bgcolor="#000000" width="600" class="email-container">
 
-          <!-- Hero Image, Flush : BEGIN -->
+          <!-- Desktop Only, Flush : BEGIN -->
           <tr>
             <td class="full-width-image qe_none">
               <img src="{{ imageSrc }}" width="600" alt="Time is Turning Back" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
             </td>
           </tr>
-          <!-- Hero Image, Flush : END -->
+          <!-- Desktop Only, Flush : END -->
 
-          <!-- Hero Image, Flush : BEGIN -->
+          <!-- Mobile Only, Flush : BEGIN -->
           <tr>
             <td class="full-width-image">
               <div class="qe_hide_desktop" style="display:none;width:0;overflow:hidden;max-height:0!important">
@@ -162,26 +173,69 @@
               </div>
             </td>
           </tr>
-          <!-- Hero Image, Flush : END
+          <!-- Mobile Only Flush : END -->
 
-          <!-- Hero Image, Flush : BEGIN -->
+
+          <!-- Row One -->
+          {{#if rowOneImage}}
           <tr>
-            <td class="full-width-image">
-              <a href="https://calendly.com/tom-method/method-introductory-call" target="_blank"> 
-                <img src="https://www.method.gg/media/email/bottom-wotlk-min.png" width="600" alt="Book A Meeting With Our Team" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
+            <td align="center" valign="top" style="padding: 15px 10px 0px 10px;">
+              <table cellspacing="0" cellpadding="0" border="0" width="100%">
+                <tr>
+                  <td class="stack-column-center">
+                    <table cellspacing="0" cellpadding="0" border="0">
+                      <tr>
+                        <td style="padding: 5px; text-align: center">
+                          <img src="{{{ rowOneImage }}}" width="280" class="full-width-image" height="auto" alt="Content Calendar" border="0" style="height:auto; max-width: 280px;">
+                        </td>
+                      </tr>
+                    </table>
+                  </td>
+                  <td class="stack-column-center">
+                    <table cellspacing="0" cellpadding="0" border="0">
+					<tr>
+                        <td style="padding: 0px 20px 10px 20px; text-align: center; color: white; font-family: Helvetica; font-weight: bold; text-decoration: underline;">
+                         {{{ rowOneTitle }}}
+                        </td>
+                      </tr>
+                      <tr>
+                        <td style="padding: 0px 20px; text-align: center; color: white; font-family: Helvetica">
+                          {{{ rowOneText }}}
+                        </td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+          {{/if}}
+          <!-- Two Even Columns : END -->
+
+
+          <!-- Video Flush : BEGIN -->
+          <tr>
+            <td class="full-width-image" style="padding: 50px 0px 40px 0px;">
+              <a href="https://www.youtube.com/watch?v=2Ia6VFc5oHQ" target="_blank">
+                <img src="https://media.istockphoto.com/vectors/video-player-screen-with-bar-multimedia-interface-with-player-bar-for-vector-id1252447446?k=20&m=1252447446&s=612x612&w=0&h=1tjggag-kjC70w58govLL_OETAxgASJK1f_y5_dyl_Q=" width="600" alt="Time is Turning Back" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
               </a>
             </td>
           </tr>
-          <!-- Hero Image, Flush : END -->
-		  
-		  <!-- Unsubscribe -->
-		<tr>
-          <td style="padding: 15px 0px 15px 0px; text-align: center; color: white; font-family: Helvetica; font-weight: 500; font-size: small;">
-                         If you wish to unsubscribe, visit the following URL: ::unsubscribeUrl::
-          </td>
-        </tr>
-		<!-- Unsubscribe: END -->
+          <!-- Video Flush : END -->
 
+
+
+           <!-- CTA : BEGIN -->
+           <tr>
+            <td class="full-width-image" style="padding: 50px 0px 40px 0px;" align="center">
+              <a href="sdfsdfsfsdfsdfsdfs" target="_blank">
+                <img src="TOM-REPLACE-WITH-CTA-IMG.PNG" width="255" alt="Time is Turning Back" border="0" align="center" style="width: 100%; max-width: 255px; height: auto; color: white;">
+              </a>
+            </td>
+          </tr>
+          <!-- CTA : END -->
+
+      
 
         </table>
         <!-- Email Body : END -->
@@ -190,3 +244,5 @@
     </td>
     </tr>
   </table>
+</body>
+</html>
