--- a/templates/construction.html
+++ b/templates/construction.html
@@ -1,12 +1,3 @@
-<!doctype html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Method - Important Discovery</title>
-
-  <!-- CSS Reset -->
   <style type="text/css">
 
   html,  body {
@@ -141,11 +132,10 @@
 }
 
 </style>
-</head>
-<body bgcolor="#000000" width="100%" style="margin: 0;" yahoo="yahoo">
+
   <!-- Visually Hidden Preheader Text -->
   <div style="display: none; max-height: 0px; overflow: hidden;">
-    sdfsdfsdfsdfsdfsdffsdfsd
+    We are hard at work developing your Proposal. Please allow a few days for us to deliver. 
   </div>
   <!-- Visually Hidden Preheader Text -->
 
@@ -160,7 +150,7 @@
           <!-- Desktop Only, Flush : BEGIN -->
           <tr>
             <td class="full-width-image qe_none">
-              <img src="HARDCODED LINK" width="600" alt="Time is Turning Back" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
+              <img src="https://www.method.gg/media/email/construction-ahead-min.jpg" width="600" alt="Dwarven male hammering an anvil creating sparks" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
             </td>
           </tr>
           <!-- Desktop Only, Flush : END -->
@@ -169,12 +159,19 @@
           <tr>
             <td class="full-width-image">
               <div class="qe_hide_desktop" style="display:none;width:0;overflow:hidden;max-height:0!important">
-                <img src="HARDCODED LINK" class="qe_img100" width="600" alt="Time is Turning Back" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
+                <img src="https://www.method.gg/media/email/construction-ahead-min.jpg" class="qe_img100" width="600" alt="Dwarven male hammering an anvil creating sparks" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
               </div>
             </td>
           </tr>
           <!-- Mobile Only Flush : END -->
-      
+      		  
+		  <!-- Unsubscribe -->
+		  <tr>
+           <td style="padding: 15px 0px 15px 0px; text-align: center; color: white; font-family: Helvetica; font-weight: 500; font-size: small;">
+                         If you wish to unsubscribe, visit the following URL: ::unsubscribeUrl::
+           </td>
+          </tr>
+		  <!-- Unsubscribe: END -->
 
         </table>
         <!-- Email Body : END -->
@@ -183,5 +180,3 @@
     </td>
     </tr>
   </table>
-</body>
-</html>
