vertical align removal

--- a/templates/potions.html
+++ b/templates/potions.html
@@ -195,7 +195,7 @@
                   <td class="stack-column-center">
                     <table cellspacing="0" cellpadding="0" border="0">
                       <tr>
-                        <td style="padding: 0px 20px; text-align: center; color: white; font-family: Tahoma; vertical-align: middle; font-weight: normal;">
+                        <td style="padding: 0px 20px; text-align: center; color: white; font-family: Tahoma; font-weight: normal;">
                           {{{ rowOneText }}}
                         </td>
                       </tr>
@@ -207,7 +207,7 @@
           </tr>
           {{/if}}
           <!-- Two Even Columns : END -->
-		  
+
 		  <!-- CTA : BEGIN -->
            <tr>
             <td class="full-width-image" style="padding: 50px 0px 40px 0px;" align="center">
@@ -233,9 +233,9 @@
             </td>
           </tr>
           <!-- Video Flush : END -->
-		  
+
 		<!-- Footer: END -->
-		
+
 		<!-- Unsubscribe -->
 		<tr>
           <td style="padding: 0px 0px 20px 0px; text-align: center; color: white; font-family: Helvetica; font-weight: 500; font-size: small;">
@@ -243,7 +243,7 @@
           </td>
         </tr>
 		<!-- Unsubscribe: END -->
-		
+
         </table>
         <!-- Email Body : END -->
 
