--- a/templates/potions.html
+++ b/templates/potions.html
@@ -183,19 +183,19 @@
             <td align="left" valign="top" style="padding: 15px 10px 0px 50px;">
               <table cellspacing="0" cellpadding="0" border="0" width="100%">
                 <tr>
-                  <td class="stack-column-center">
+                  <td class="stack-column-center" width="50%">
                     <table cellspacing="0" cellpadding="0" border="0">
                       <tr>
                         <td style="padding: 5px; text-align: center">
-                          <img src="{{{ rowOneImage }}}" width="280" class="full-width-image" height="auto" alt="Image of {{{brandName }}} Branded {{{ rowOneTitle }}}" border="0" style="height:auto; max-width: 280px;">
+                          <img src="{{{ rowOneImage }}}" width="100%" class="full-width-image" height="auto" alt="Image of {{{brandName }}} Branded {{{ rowOneTitle }}}" border="0" style="height:auto; max-width: 280px;">
                         </td>
                       </tr>
                     </table>
                   </td>
-                  <td class="stack-column-center">
+                  <td class="stack-column-center" width="50%">
                     <table cellspacing="0" cellpadding="0" border="0">
                       <tr>
-                        <td style="padding: 0px 20px; text-align: center; color: white; font-family: Tahoma; font-weight: normal;">
+                        <td width="50%" style="padding: 0px 20px; text-align: center; color: white; font-family: Tahoma; font-weight: normal;">
                           {{{ rowOneText }}}
                         </td>
                       </tr>
