--- a/templates/potions_mobile.html
+++ b/templates/potions_mobile.html
@@ -158,12 +158,12 @@
 
 		  <!-- Unlock Transmutation: BEGIN -->
 		  <tr>
-           <td style="padding: 25px 0px 10px 50px; text-align: left; color: white; font-family: Tahoma; font-weight: bolder; font-size: xx-large;">
+           <td style="padding: 25px 10px 10px 10px; text-align: center; color: white; font-family: Tahoma; font-weight: bolder; font-size: 21px;">
               UNLOCK TRANSMUTATION:
            </td>
           </tr>
 		  <tr>
-           <td style="padding: 10px 0px 0px 50px; text-align: left; color: white; font-family: Tahoma; font-weight: bold; font-size: larger; text-transform:uppercase;">
+           <td style="padding: 10px 10px 0px 10px; text-align: center; color: white; font-family: Tahoma; font-weight: bold; font-size: 18px; text-transform:uppercase;">
               {{{ rowOneTitle }}}
            </td>
           </tr>
@@ -183,7 +183,7 @@
 
           <!-- Unlock Transmutation: BEGIN -->
           <tr>
-              <td style="padding: 25px 0px 10px 50px; text-align: left; color: white; font-family: Tahoma; font-weight: bolder; font-size: xx-large;">
+              <td style="padding: 25px 10px 10px 10px; text-align: center; color: white; font-family: Tahoma; font-size: 18px;">
                 {{{ rowOneText }}}
               </td>
               </tr>
@@ -204,7 +204,7 @@
 
 <!-- Footer -->
 		<tr>
-          <td style="padding: 25px 0px 10px 0px; text-align: center; color: white; font-family: Tahoma; font-weight: bold; font-size: x-large;">
+          <td style="padding: 25px 10px 10px 10px; text-align: center; color: white; font-family: Tahoma; font-weight: bold; font-size: 21px;">
                          Razer Case Study
           </td>
         </tr>
