mobile desktop templates

--- a/templates/launch_mobile.html
+++ b/templates/launch_mobile.html
@@ -1,4 +1,4 @@
-  <style type="text/css">
+<style type="text/css">
 
   html,  body {
     margin: 0 !important;
@@ -132,10 +132,9 @@
 }
 
 </style>
-
   <!-- Visually Hidden Preheader Text -->
   <div style="display: none; max-height: 0px; overflow: hidden;">
-    We are hard at work developing your Proposal. Please allow a few days for us to deliver. 
+    Don't miss the opportunity to align {{{ brandName }}} with the MMORPG Community on the Highest Rated World of Warcraft Expansion of All Time!
   </div>
   <!-- Visually Hidden Preheader Text -->
 
@@ -145,33 +144,35 @@
         <center style="width: 100%;">
 
         <!-- Email Body : BEGIN -->
-        <table cellspacing="0" cellpadding="0" border="0" align="center" bgcolor="#000000" width="600" class="email-container">
+        <table cellspacing="0" cellpadding="0" border="0" align="center" bgcolor="#000000" width="100%" class="email-container">
 
-          <!-- Desktop Only, Flush : BEGIN -->
-          <tr>
-            <td class="full-width-image qe_none">
-              <img src="https://www.method.gg/media/email/construction-ahead-min.jpg" width="600" alt="Dwarven male hammering an anvil creating sparks" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
-            </td>
-          </tr>
-          <!-- Desktop Only, Flush : END -->
-
-          <!-- Mobile Only, Flush : BEGIN -->
+          <!-- Hero Image, Flush : BEGIN -->
           <tr>
             <td class="full-width-image">
-              <div class="qe_hide_desktop" style="display:none;width:0;overflow:hidden;max-height:0!important">
-                <img src="https://www.method.gg/media/email/construction-ahead-min.jpg" class="qe_img100" width="600" alt="Dwarven male hammering an anvil creating sparks" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
-              </div>
+              <img src="{{ mobileImageSrc }}" width="100%" alt="Time is Turning Back" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
             </td>
           </tr>
-          <!-- Mobile Only Flush : END -->
-      		  
-		  <!-- Unsubscribe -->
-		  <tr>
-           <td style="padding: 15px 0px 15px 0px; text-align: center; color: white; font-family: Helvetica; font-weight: 500; font-size: small;">
-                         If you wish to unsubscribe, visit the following URL: ::unsubscribeUrl::
-           </td>
+          <!-- Hero Image, Flush : END -->
+
+
+          <!-- Hero Image, Flush : BEGIN -->
+          <tr>
+            <td class="full-width-image">
+              <a href="https://calendly.com/tom-method/method-introductory-call" target="_blank"> 
+                <img src="https://www.method.gg/media/email/bottom-wotlk-min.png" width="100%" alt="Book A Meeting With Our Team" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
+              </a>
+            </td>
           </tr>
-		  <!-- Unsubscribe: END -->
+          <!-- Hero Image, Flush : END -->
+		  
+		  <!-- Unsubscribe -->
+		<tr>
+          <td style="padding: 15px 0px 15px 0px; text-align: center; color: white; font-family: Helvetica; font-weight: 500; font-size: small;">
+            If you wish to unsubscribe, visit the following URL: ::unsubscribeUrl::
+          </td>
+        </tr>
+		<!-- Unsubscribe: END -->
+
 
         </table>
         <!-- Email Body : END -->
