--- a/templates/construction_desktop.html
+++ b/templates/construction_desktop.html
@@ -132,9 +132,10 @@
 }
 
 </style>
+
   <!-- Visually Hidden Preheader Text -->
   <div style="display: none; max-height: 0px; overflow: hidden;">
-    Don't miss the opportunity to align {{{ brandName }}} with the MMORPG Community on the Highest Rated World of Warcraft Expansion of All Time!
+    We are hard at work developing your Proposal. Please allow a few days for us to deliver. 
   </div>
   <!-- Visually Hidden Preheader Text -->
 
@@ -146,42 +147,22 @@
         <!-- Email Body : BEGIN -->
         <table cellspacing="0" cellpadding="0" border="0" align="center" bgcolor="#000000" width="600" class="email-container">
 
-          <!-- Hero Image, Flush : BEGIN -->
-          <tr>
-            <td class="full-width-image qe_none">
-              <img src="{{ imageSrc }}" width="600" alt="Time is Turning Back" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
-            </td>
-          </tr>
-          <!-- Hero Image, Flush : END -->
-
-          <!-- Hero Image, Flush : BEGIN -->
+          <!-- Desktop Only, Flush : BEGIN -->
           <tr>
             <td class="full-width-image">
-              <div class="qe_hide_desktop" style="display:none;width:0;overflow:hidden;max-height:0!important">
-                <img src="{{ imageSrcMobile }}" class="qe_img100" width="600" alt="Time is Turning Back" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
-              </div>
+              <img src="{{{ imageSrc }}}" width="600" alt="Dwarven male hammering an anvil creating sparks" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
             </td>
           </tr>
-          <!-- Hero Image, Flush : END
+          <!-- Desktop Only, Flush : END -->
 
-          <!-- Hero Image, Flush : BEGIN -->
-          <tr>
-            <td class="full-width-image">
-              <a href="https://calendly.com/tom-method/method-introductory-call" target="_blank"> 
-                <img src="https://www.method.gg/media/email/bottom-wotlk-min.png" width="600" alt="Book A Meeting With Our Team" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
-              </a>
-            </td>
-          </tr>
-          <!-- Hero Image, Flush : END -->
-		  
+      		  
 		  <!-- Unsubscribe -->
-		<tr>
-          <td style="padding: 15px 0px 15px 0px; text-align: center; color: white; font-family: Helvetica; font-weight: 500; font-size: small;">
+		  <tr>
+           <td style="padding: 15px 0px 15px 0px; text-align: center; color: white; font-family: Helvetica; font-weight: 500; font-size: small;">
                          If you wish to unsubscribe, visit the following URL: ::unsubscribeUrl::
-          </td>
-        </tr>
-		<!-- Unsubscribe: END -->
-
+           </td>
+          </tr>
+		  <!-- Unsubscribe: END -->
 
         </table>
         <!-- Email Body : END -->
