--- a/templates/goblin_mobile.html
+++ b/templates/goblin_mobile.html
@@ -135,7 +135,7 @@
 
   <!-- Visually Hidden Preheader Text -->
   <div style="display: none; max-height: 0px; overflow: hidden;">
-    Champions of {{{ brandName }}}, a new Campaign Element has been fused together by our Master Alchemists. Take advantage of it's power!
+    {{{ brandName }}} - Engineers of Diz'count have made an important discovery! Target the MMO+RPG Audience and receive up to 15% off Sponsorship Costs.
   </div>
   <!-- Visually Hidden Preheader Text -->
 
@@ -147,28 +147,25 @@
         <!-- Email Body : BEGIN -->
         <table cellspacing="0" cellpadding="0" border="0" align="center" bgcolor="#000000" width="100%" class="email-container">
 
-        <!-- Desktop Only, Flush : BEGIN -->
-        <tr>
-          <td class="full-width-image">
-            <img src="{{ imageSrc }}" width="100%" alt="Quest: 'Onwards to Northrend' with Hero Image of Gnome mixing potions into a cauldron" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
+          <!-- Desktop Only, Flush : BEGIN -->
+          <tr>
+            <td class="full-width-image">
+              <img src="{{ imageSrc }}" width="100%" alt="Goblin excitedly glaring at glowing cube with flashing discount in it's hand" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
+            </td>
+          </tr>
+          <!-- Desktop Only, Flush : END -->
+
+		
+		  <!-- Deliverables: BEGIN -->
+		<tr>
+          <td style="padding: 25px 10px 10px 10px; text-align: center; color: white; font-family: Helvetica; font-weight: bold; text-decoration: underline; font-size: larger;">
+                         {{{ brandName }}} Race to World First Example Deliverables
           </td>
         </tr>
-        <!-- Desktop Only, Flush : END -->
-
-
-		  <!-- Unlock Transmutation: BEGIN -->
-		  <tr>
-           <td style="padding: 25px 10px 10px 10px; text-align: center; color: white; font-family: Tahoma; font-weight: bolder; font-size: 21px;">
-              UNLOCK TRANSMUTATION:
-           </td>
-          </tr>
-
-		    
-
+		  <!-- Deliverables: END -->
 
           <!-- Row One -->
           {{#if rowOneImage}}
-
           <tr>
             <td style="padding: 10px 10px 14px 10px; text-align: center; color: white; font-family: Tahoma; font-weight: bold; font-size: 18px; text-transform:uppercase;">
                {{{ rowOneTitle }}}
@@ -185,28 +182,78 @@
 
 
           <!-- Unlock Transmutation: BEGIN -->
-          <tr>
-              <td style="padding: 25px 10px 10px 10px; text-align: center; color: white; font-family: Tahoma; font-size: 18px;">
+            <tr>
+              <td style="padding: 25px 10px 60px 10px; text-align: center; color: white; font-family: Tahoma; font-size: 18px;">
                 {{{ rowOneText }}}
               </td>
-              </tr>
+            </tr>
+          {{/if}}
 
+           <!-- Row Two -->
+         {{#if rowTwoImage}}
+          <tr>
+            <td style="padding: 10px 10px 14px 10px; text-align: center; color: white; font-family: Tahoma; font-weight: bold; font-size: 18px; text-transform:uppercase;">
+               {{{ rowTwoTitle }}}
+            </td>
+           </tr>
+
+           <!-- Flush : BEGIN -->
+            <tr>
+              <td class="full-width-image">
+                <img src="{{{ rowTwoImage }}}" width="100%" alt="Quest: 'Onwards to Northrend' with Hero Image of Gnome mixing potions into a cauldron" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
+              </td>
+            </tr>
+            <!-- Desktop Only, Flush : END -->
+
+
+          <!-- Unlock Transmutation: BEGIN -->
+            <tr>
+              <td style="padding: 25px 10px 60px 10px; text-align: center; color: white; font-family: Tahoma; font-size: 18px;">
+                {{{ rowTwoText }}}
+              </td>
+            </tr>
+           {{/if}}
+           <!-- Two Even Columns : END -->
+
+            <!-- Row Three -->
+          {{#if rowThreeImage}}
+          <tr>
+            <td style="padding: 10px 10px 14px 10px; text-align: center; color: white; font-family: Tahoma; font-weight: bold; font-size: 18px; text-transform:uppercase;">
+               {{{ rowThreeTitle }}}
+            </td>
+           </tr>
+
+           <!-- Flush : BEGIN -->
+            <tr>
+              <td class="full-width-image">
+                <img src="{{{ rowThreeImage }}}" width="100%" alt="Quest: 'Onwards to Northrend' with Hero Image of Gnome mixing potions into a cauldron" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
+              </td>
+            </tr>
+            <!-- Desktop Only, Flush : END -->
+
+
+          <!-- Unlock Transmutation: BEGIN -->
+            <tr>
+              <td style="padding: 25px 10px 60px 10px; text-align: center; color: white; font-family: Tahoma; font-size: 18px;">
+                {{{ rowThreeText }}}
+              </td>
+            </tr>
           {{/if}}
           <!-- Two Even Columns : END -->
+		  
+		 <!-- 1 Column Text : START -->
+          <tr>
+          <td align="center" valign="top"  style="padding: 15px 0px 20px 0px; text-align: center; font-family: Helvetica; font-size: 15px; mso-height-rule: exactly; line-height: 20px; color: #ffffff;">
+            <a style="padding: 15px 20px; width: 60%; text-align: center; border-radius: 4px; background-color: #ff9015; display: inline-block; color: #fff !important; text-decoration: none; font-weight: bold;" href="{{{ ctaLink }}}" target="_blank">
+              Download {{{ brandName }}} Race to World First Proposal
+            </a>
+          </td>
+        </tr>
+        <!-- 1 Column Text : END -->
 
-		  <!-- CTA : BEGIN -->
-           <tr>
-            <td class="full-width-image" style="padding: 50px 0px 40px 0px;" align="center">
-              <a href="https://calendly.com/tom-method/method-race-to-world-first-discussion" target="_blank">
-                <img src="https://www.method.gg/media/email/book-meeting-button.png" width="255" alt="Complete Quest Button" border="0" align="center" style="width: 100%; max-width: 255px; height: auto; color: white;">
-              </a>
-            </td>
-          </tr>
-          <!-- CTA : END -->
-
-<!-- Footer -->
+		<!-- Footer -->
 		<tr>
-          <td style="padding: 25px 10px 10px 10px; text-align: center; color: white; font-family: Tahoma; font-weight: bold; font-size: 21px;">
+          <td style="padding: 25px 10px 10px 10px; text-align: center; color: white; font-family: Helvetica; font-weight: bold; font-size: 21px;">
                          Razer Case Study
           </td>
         </tr>
@@ -219,9 +266,9 @@
             </td>
           </tr>
           <!-- Video Flush : END -->
-
+		  
 		<!-- Footer: END -->
-
+		
 		<!-- Unsubscribe -->
 		<tr>
           <td style="padding: 0px 0px 20px 0px; text-align: center; color: white; font-family: Helvetica; font-weight: 500; font-size: small;">
@@ -229,7 +276,6 @@
           </td>
         </tr>
 		<!-- Unsubscribe: END -->
-
         </table>
         <!-- Email Body : END -->
 
